--- a/templates/readme.erb
+++ b/templates/readme.erb
@@ -1,2 +1,4 @@
 # android-latest
 :watermelon: Latest android versions for development (buildTools, TargetSdk, etc.)
+
+<%= hash['latestAndroidVersionNumber'] %>
