generators are creating files

--- a/templates/readme.erb
+++ b/templates/readme.erb
@@ -1,4 +1,14 @@
 # android-latest
 :watermelon: Latest android versions for development (buildTools, TargetSdk, etc.)
 
-<%= hash['latestAndroidVersionNumber'] %>
+| keys | values     |
+|:-----------:|:--------:|
+| latestAndroidVersionNumber | <%= hash['latestAndroidVersionNumber'] %> |
+| latestAndroidVersionName | <%= hash['latestAndroidVersionName'] %>     |
+| latestAndroidReleaseDate | <%= hash['latestAndroidReleaseDate'] %>       |
+| latestAndroidVersionCode | <%= hash['latestAndroidVersionCode'] %>       |
+| compileSdkVersion | <%= hash['compileSdkVersion'] %>       |
+| buildToolsVersion | <%= hash['buildToolsVersion'] %>       |
+| minSdkVersion | <%= hash['minSdkVersion'] %>       |
+| targetSdkVersion | <%= hash['targetSdkVersion'] %>       |
+| com.android.support | <%= hash['com.android.support'] %>       |
