main readmefile is generated via the generator

--- a/templates/readme.erb
+++ b/templates/readme.erb
@@ -1,5 +1,7 @@
 # android-latest
-:watermelon: Latest android versions for development (buildTools, TargetSdk, etc.)
+Latest android versions for developers
+
+<center>
 
 | keys | values     |
 |:-----------:|:--------:|
@@ -12,3 +14,36 @@
 | minSdkVersion | <%= hash['minSdkVersion'] %>       |
 | targetSdkVersion | <%= hash['targetSdkVersion'] %>       |
 | com.android.support | <%= hash['com.android.support'] %>       |
+
+</center>
+## Synopsis
+
+At the top of the file there should be a short introduction and/ or overview that explains **what** the project is. This description should match descriptions added for package managers (Gemspec, package.json, etc.)
+
+## Code Example
+
+Show what the library does as concisely as possible, developers should be able to figure out **how** your project solves their problem by looking at the code example. Make sure the API you are showing off is obvious, and that your code is short and concise.
+
+## Motivation
+
+I'm always wondering
+A short description of the motivation behind the creation and maintenance of the project. This should explain **why** the project exists.
+
+## Installation
+
+Just run
+> `gem install erubis json colorize`
+
+and you are free to execute the generator!
+
+
+## Contributors
+
+1. Fork the project
+2. Update the `data.json`
+3. Run the `ruby generator.rb`
+4. Create the pull request
+
+## License
+
+A short snippet describing the license (MIT, Apache, etc.)
