--- a/templates/readme.erb
+++ b/templates/readme.erb
@@ -6,28 +6,21 @@ Latest android versions for developers
 | keys | values     |
 |:-----------:|:--------:|
 | latestAndroidVersionNumber | <%= hash['latestAndroidVersionNumber'] %> |
-| latestAndroidVersionName | <%= hash['latestAndroidVersionName'] %>     |
-| latestAndroidReleaseDate | <%= hash['latestAndroidReleaseDate'] %>       |
-| latestAndroidVersionCode | <%= hash['latestAndroidVersionCode'] %>       |
-| compileSdkVersion | <%= hash['compileSdkVersion'] %>       |
-| buildToolsVersion | <%= hash['buildToolsVersion'] %>       |
-| minSdkVersion | <%= hash['minSdkVersion'] %>       |
-| targetSdkVersion | <%= hash['targetSdkVersion'] %>       |
-| com.android.support | <%= hash['com.android.support'] %>       |
+| latestAndroidVersionName | <%= hash['latestAndroidVersionName'] %> |
+| latestAndroidReleaseDate | <%= hash['latestAndroidReleaseDate'] %> |
+| latestAndroidVersionCode | <%= hash['latestAndroidVersionCode'] %> |
+| compileSdkVersion | <%= hash['compileSdkVersion'] %> |
+| buildToolsVersion | <%= hash['buildToolsVersion'] %> |
+| minSdkVersion | <%= hash['minSdkVersion'] %> |
+| targetSdkVersion | <%= hash['targetSdkVersion'] %> |
+| com.android.support | <%= hash['com.android.support'] %> |
 
 </center>
-## Synopsis
-
-At the top of the file there should be a short introduction and/ or overview that explains **what** the project is. This description should match descriptions added for package managers (Gemspec, package.json, etc.)
-
-## Code Example
-
-Show what the library does as concisely as possible, developers should be able to figure out **how** your project solves their problem by looking at the code example. Make sure the API you are showing off is obvious, and that your code is short and concise.
 
 ## Motivation
 
-I'm always wondering
-A short description of the motivation behind the creation and maintenance of the project. This should explain **why** the project exists.
+I'm always wondering what the latest versions of buildTools/support/etc. are, so here is a repository with the updated information for consultation.
+Anyone can open a pull request if any version comes out and I fail to notice.
 
 ## Installation
 
@@ -37,7 +30,7 @@ Just run
 and you are free to execute the generator!
 
 
-## Contributors
+## Contributing
 
 1. Fork the project
 2. Update the `data.json`
@@ -46,4 +39,4 @@ and you are free to execute the generator!
 
 ## License
 
-A short snippet describing the license (MIT, Apache, etc.)
+This project is available under the MIT license. See the LICENSE file for more info.
