--- a/templates/readme.erb
+++ b/templates/readme.erb
@@ -13,7 +13,7 @@ Latest android versions for developers
 | buildToolsVersion | <%= hash['buildToolsVersion'] %> |
 | minSdkVersion | <%= hash['minSdkVersion'] %> |
 | targetSdkVersion | <%= hash['targetSdkVersion'] %> |
-| com.android.support | <%= hash['com.android.support'] %> |
+| latestSupportVersion | <%= hash['com.android.support'] %> |
 
 </center>
 
