--- a/templates/build.gradle.erb
+++ b/templates/build.gradle.erb
@@ -7,5 +7,5 @@ ext {
   buildToolsVersion "<%= hash['buildToolsVersion'] %>"
   minSdkVersion <%= hash['minSdkVersion'] %>
   targetSdkVersion <%= hash['targetSdkVersion'] %>
-  latestSupportVersion "<%= hash['com.android.support'] %>"
+  latestSupportVersion "<%= hash['latestSupportVersion'] %>"
 }
