--- a/templates/build.gradle.erb
+++ b/templates/build.gradle.erb
@@ -1,11 +1,11 @@
 ext {
-  latestAndroidVersionNumber "<%= hash['latestAndroidVersionNumber'] %>"
-  latestAndroidVersionName "<%= hash['latestAndroidVersionName'] %>"
-  latestAndroidReleaseDate "<%= hash['latestAndroidReleaseDate'] %>"
-  latestAndroidVersionCode <%= hash['latestAndroidVersionCode'] %>
-  compileSdkVersion <%= hash['compileSdkVersion'] %>
-  buildToolsVersion "<%= hash['buildToolsVersion'] %>"
-  minSdkVersion <%= hash['minSdkVersion'] %>
-  targetSdkVersion <%= hash['targetSdkVersion'] %>
-  latestSupportVersion "<%= hash['latestSupportVersion'] %>"
+  latestAndroidVersionNumber = "<%= hash['latestAndroidVersionNumber'] %>"
+  latestAndroidVersionName = "<%= hash['latestAndroidVersionName'] %>"
+  latestAndroidReleaseDate = "<%= hash['latestAndroidReleaseDate'] %>"
+  latestAndroidVersionCode = <%= hash['latestAndroidVersionCode'] %>
+  compileSdkVersion = <%= hash['compileSdkVersion'] %>
+  buildToolsVersion = "<%= hash['buildToolsVersion'] %>"
+  minSdkVersion = <%= hash['minSdkVersion'] %>
+  targetSdkVersion = <%= hash['targetSdkVersion'] %>
+  latestSupportVersion = "<%= hash['latestSupportVersion'] %>"
 }
