--- a/templates/build.gradle.erb
+++ b/templates/build.gradle.erb
@@ -1,11 +1,13 @@
-ext {
-  latestAndroidVersionNumber = "<%= hash['latestAndroidVersionNumber'] %>"
-  latestAndroidVersionName = "<%= hash['latestAndroidVersionName'] %>"
-  latestAndroidReleaseDate = "<%= hash['latestAndroidReleaseDate'] %>"
-  latestAndroidVersionCode = <%= hash['latestAndroidVersionCode'] %>
-  compileSdkVersion = <%= hash['compileSdkVersion'] %>
-  buildToolsVersion = "<%= hash['buildToolsVersion'] %>"
-  minSdkVersion = <%= hash['minSdkVersion'] %>
-  targetSdkVersion = <%= hash['targetSdkVersion'] %>
-  latestSupportVersion = "<%= hash['latestSupportVersion'] %>"
+allprojects {
+  ext {
+    latestAndroidVersionNumber = "<%= hash['latestAndroidVersionNumber'] %>"
+    latestAndroidVersionName = "<%= hash['latestAndroidVersionName'] %>"
+    latestAndroidReleaseDate = "<%= hash['latestAndroidReleaseDate'] %>"
+    latestAndroidVersionCode = <%= hash['latestAndroidVersionCode'] %>
+    compileSdkVersion = <%= hash['compileSdkVersion'] %>
+    buildToolsVersion = "<%= hash['buildToolsVersion'] %>"
+    minSdkVersion = <%= hash['minSdkVersion'] %>
+    targetSdkVersion = <%= hash['targetSdkVersion'] %>
+    latestSupportVersion = "<%= hash['latestSupportVersion'] %>"
+  }
 }
