added build tools gradle version

--- a/templates/readme.erb
+++ b/templates/readme.erb
@@ -14,6 +14,7 @@ Latest android versions for developers
 | minSdkVersion | <%= hash['minSdkVersion'] %> |
 | targetSdkVersion | <%= hash['targetSdkVersion'] %> |
 | latestSupportVersion | <%= hash['latestSupportVersion'] %> |
+| buildGradleToolsVersion | <%= hash['buildGradleToolsVersion'] %> |
 
 </center>
 
