--- a/templates/build.gradle.erb
+++ b/templates/build.gradle.erb
@@ -9,5 +9,6 @@ allprojects {
     minSdkVersion = <%= hash['minSdkVersion'] %>
     targetSdkVersion = <%= hash['targetSdkVersion'] %>
     latestSupportVersion = "<%= hash['latestSupportVersion'] %>"
+    buildGradleToolsVersion = "<%= hash['buildGradleToolsVersion'] %>"
   }
 }
