build.gradle usage instructions

--- a/templates/readme.erb
+++ b/templates/readme.erb
@@ -27,8 +27,20 @@ Anyone can open a pull request if any version comes out and I fail to notice.
 
 - [data.json](data.json)
 - [build.gradle](generated/build.gradle)
-- [README.md](generated/README.md)
 - [index.html](generated/index.html)
+- [README.md](generated/README.md)
+
+## `build.gradle` usage
+
+Apply this in your main `build.gradle`
+```groovy
+apply from: 'https://raw.githubusercontent.com/cesarferreira/android-latest/master/generated/build.gradle'
+```
+
+Use the variables at will
+```groovy
+buildToolsVersion rootProject.ext.buildToolsVersion
+```
 
 ## Installation
 
