--- a/templates/readme.erb
+++ b/templates/readme.erb
@@ -4,22 +4,22 @@ Latest android versions for developers. Can be found online [here](http://htmlpr
 
 
 ------------
-The following table was automatically generated:
+The following table was automatically generated based on [data.json](data.json):
 
 <center>
 
 | keys | values     |
 |:-----------:|:--------:|
-| latestAndroidVersionNumber | <%= hash['latestAndroidVersionNumber'] %> |
-| latestAndroidVersionName | <%= hash['latestAndroidVersionName'] %> |
-| latestAndroidReleaseDate | <%= hash['latestAndroidReleaseDate'] %> |
+| buildGradleToolsVersion | <%= hash['buildGradleToolsVersion'] %> |
 | latestAndroidVersionCode | <%= hash['latestAndroidVersionCode'] %> |
 | compileSdkVersion | <%= hash['compileSdkVersion'] %> |
 | buildToolsVersion | <%= hash['buildToolsVersion'] %> |
 | minSdkVersion | <%= hash['minSdkVersion'] %> |
 | targetSdkVersion | <%= hash['targetSdkVersion'] %> |
 | latestSupportVersion | <%= hash['latestSupportVersion'] %> |
-| buildGradleToolsVersion | <%= hash['buildGradleToolsVersion'] %> |
+| latestAndroidVersionNumber | <%= hash['latestAndroidVersionNumber'] %> |
+| latestAndroidVersionName | <%= hash['latestAndroidVersionName'] %> |
+| latestAndroidReleaseDate | <%= hash['latestAndroidReleaseDate'] %> |
 
 </center>
 
