added google play services

--- a/templates/html.erb
+++ b/templates/html.erb
@@ -208,6 +208,12 @@
         </td>
       </tr>
       <tr>
+        <td class="text-left">googlePlayServicesVersion</td>
+        <td class="text-left">
+          <%= hash['googlePlayServicesVersion'] %>
+        </td>
+      </tr>
+      <tr>
         <td class="text-left">latestAndroidVersionNumber</td>
         <td class="text-left">
           <%= hash['latestAndroidVersionNumber'] %>
