--- a/templates/readme.erb
+++ b/templates/readme.erb
@@ -16,6 +16,7 @@ The following table was automatically generated based on [data.json](data.json):
 | buildToolsVersion | <%= hash['buildToolsVersion'] %> |
 | targetSdkVersion | <%= hash['targetSdkVersion'] %> |
 | latestSupportVersion | <%= hash['latestSupportVersion'] %> |
+| googlePlayServicesVersion | <%= hash['googlePlayServicesVersion'] %> |
 | latestAndroidVersionNumber | <%= hash['latestAndroidVersionNumber'] %> |
 | latestAndroidVersionName | <%= hash['latestAndroidVersionName'] %> |
 | latestAndroidReleaseDate | <%= hash['latestAndroidReleaseDate'] %> |
