added gradle version

--- a/templates/html.erb
+++ b/templates/html.erb
@@ -178,6 +178,12 @@
         </td>
       </tr>
       <tr>
+        <td class="text-left">gradlePropertiesVersion</td>
+        <td class="text-left">
+          <%= hash['gradlePropertiesVersion'] %>
+        </td>
+      </tr>
+      <tr>
         <td class="text-left">latestAndroidVersionCode</td>
         <td class="text-left">
           <%= hash['latestAndroidVersionCode'] %>
