--- a/templates/build.gradle.erb
+++ b/templates/build.gradle.erb
@@ -6,6 +6,7 @@ allprojects {
     latestAndroidVersionCode = <%= hash['latestAndroidVersionCode'] %>
     compileSdkVersion = <%= hash['compileSdkVersion'] %>
     buildToolsVersion = "<%= hash['buildToolsVersion'] %>"
+    gradlePropertiesVersion = "<%= hash['gradlePropertiesVersion'] %>"
     googlePlayServicesVersion = "<%= hash['googlePlayServicesVersion'] %>"
     targetSdkVersion = <%= hash['targetSdkVersion'] %>
     latestSupportVersion = "<%= hash['latestSupportVersion'] %>"
