adopted @sdoward 's name suggestions

--- a/templates/build.gradle.erb
+++ b/templates/build.gradle.erb
@@ -6,7 +6,7 @@ allprojects {
     latestAndroidVersionCode = <%= hash['latestAndroidVersionCode'] %>
     compileSdkVersion = <%= hash['compileSdkVersion'] %>
     buildToolsVersion = "<%= hash['buildToolsVersion'] %>"
-    gradlePropertiesVersion = "<%= hash['gradlePropertiesVersion'] %>"
+    gradleVersion = "<%= hash['gradleVersion'] %>"
     googlePlayServicesVersion = "<%= hash['googlePlayServicesVersion'] %>"
     targetSdkVersion = <%= hash['targetSdkVersion'] %>
     latestSupportVersion = "<%= hash['latestSupportVersion'] %>"
