--- a/templates/html.erb
+++ b/templates/html.erb
@@ -178,9 +178,9 @@
         </td>
       </tr>
       <tr>
-        <td class="text-left">gradlePropertiesVersion</td>
+        <td class="text-left">gradleVersion</td>
         <td class="text-left">
-          <%= hash['gradlePropertiesVersion'] %>
+          <%= hash['gradleVersion'] %>
         </td>
       </tr>
       <tr>
