--- a/templates/readme.erb
+++ b/templates/readme.erb
@@ -11,7 +11,7 @@ The following table was automatically generated based on [data.json](data.json):
 | keys | values     |
 |:-----------:|:--------:|
 | buildGradleToolsVersion | <%= hash['buildGradleToolsVersion'] %> |
-| gradlePropertiesVersion | <%= hash['gradlePropertiesVersion'] %> |
+| gradleVersion | <%= hash['gradleVersion'] %> |
 | latestAndroidVersionCode | <%= hash['latestAndroidVersionCode'] %> |
 | compileSdkVersion | <%= hash['compileSdkVersion'] %> |
 | buildToolsVersion | <%= hash['buildToolsVersion'] %> |
