adopted another suggestion by @sdoward

--- a/templates/html.erb
+++ b/templates/html.erb
@@ -172,9 +172,9 @@
     </thead>
     <tbody class="table-hover">
       <tr>
-        <td class="text-left">buildGradleToolsVersion</td>
+        <td class="text-left">androidGradlePluginVersion</td>
         <td class="text-left">
-          <%= hash['buildGradleToolsVersion'] %>
+          <%= hash['androidGradlePluginVersion'] %>
         </td>
       </tr>
       <tr>
