--- a/templates/build.gradle.erb
+++ b/templates/build.gradle.erb
@@ -10,6 +10,6 @@ allprojects {
     googlePlayServicesVersion = "<%= hash['googlePlayServicesVersion'] %>"
     targetSdkVersion = <%= hash['targetSdkVersion'] %>
     latestSupportVersion = "<%= hash['latestSupportVersion'] %>"
-    buildGradleToolsVersion = "<%= hash['buildGradleToolsVersion'] %>"
+    androidGradlePluginVersion = "<%= hash['androidGradlePluginVersion'] %>"
   }
 }
