--- a/templates/readme.erb
+++ b/templates/readme.erb
@@ -10,7 +10,7 @@ The following table was automatically generated based on [data.json](data.json):
 
 | keys | values     |
 |:-----------:|:--------:|
-| buildGradleToolsVersion | <%= hash['buildGradleToolsVersion'] %> |
+| androidGradlePluginVersion | <%= hash['androidGradlePluginVersion'] %> |
 | gradleVersion | <%= hash['gradleVersion'] %> |
 | latestAndroidVersionCode | <%= hash['latestAndroidVersionCode'] %> |
 | compileSdkVersion | <%= hash['compileSdkVersion'] %> |
