--- a/templates/html.erb
+++ b/templates/html.erb
@@ -118,6 +118,7 @@
       font-size: 18px;
       text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
       border-right: 1px solid #C1C3D1;
+      white-space: nowrap;
     }
 
     td:last-child {
@@ -168,6 +169,7 @@
       <tr>
         <th class="text-left">Key</th>
         <th class="text-left">Value</th>
+        <th class="text-left">Sample</th>
       </tr>
     </thead>
     <tbody class="table-hover">
@@ -176,68 +178,78 @@
         <td class="text-left">
           <%= hash['androidGradlePluginVersion'] %>
         </td>
+        <td class="text-left">classpath 'com.android.tools.build:gradle:2.2.0'</td>
       </tr>
       <tr>
         <td class="text-left">gradleVersion</td>
         <td class="text-left">
           <%= hash['gradleVersion'] %>
         </td>
+        <td class="text-left">classpath 'com.android.tools.build:gradle:2.2.0'</td>
       </tr>
       <tr>
         <td class="text-left">latestAndroidVersionCode</td>
         <td class="text-left">
           <%= hash['latestAndroidVersionCode'] %>
         </td>
+        <td class="text-left">classpath 'com.android.tools.build:gradle:2.2.0'</td>
       </tr>
       <tr>
         <td class="text-left">compileSdkVersion</td>
         <td class="text-left">
           <%= hash['compileSdkVersion'] %>
         </td>
+        <td class="text-left">classpath 'com.android.tools.build:gradle:2.2.0'</td>
       </tr>
       <tr>
         <td class="text-left">buildToolsVersion</td>
         <td class="text-left">
           <%= hash['buildToolsVersion'] %>
         </td>
+        <td class="text-left">classpath 'com.android.tools.build:gradle:2.2.0'</td>
       </tr>
       <tr>
         <td class="text-left">targetSdkVersion</td>
         <td class="text-left">
           <%= hash['targetSdkVersion'] %>
         </td>
+        <td class="text-left">classpath 'com.android.tools.build:gradle:2.2.0'</td>
       </tr>
       <tr>
         <td class="text-left">latestSupportVersion</td>
         <td class="text-left">
           <%= hash['latestSupportVersion'] %>
         </td>
+        <td class="text-left">classpath 'com.android.tools.build:gradle:2.2.0'</td>
       </tr>
       <tr>
         <td class="text-left">googlePlayServicesVersion</td>
         <td class="text-left">
           <%= hash['googlePlayServicesVersion'] %>
         </td>
+        <td class="text-left">classpath 'com.android.tools.build:gradle:2.2.0'</td>
       </tr>
       <tr>
         <td class="text-left">latestAndroidVersionNumber</td>
         <td class="text-left">
           <%= hash['latestAndroidVersionNumber'] %>
         </td>
+        <td class="text-left">classpath 'com.android.tools.build:gradle:2.2.0'</td>
       </tr>
       <tr>
         <td class="text-left">latestAndroidVersionName</td>
         <td class="text-left">
           <%= hash['latestAndroidVersionName'] %>
         </td>
+        <td class="text-left">classpath 'com.android.tools.build:gradle:2.2.0'</td>
       </tr>
       <tr>
         <td class="text-left">latestAndroidReleaseDate</td>
         <td class="text-left">
           <%= hash['latestAndroidReleaseDate'] %>
         </td>
+        <td class="text-left">classpath 'com.android.tools.build:gradle:2.2.0'</td>
       </tr>
-
     </tbody>
   </table>
   </br>
