--- a/templates/html.erb
+++ b/templates/html.erb
@@ -15,11 +15,8 @@
     }
 
     div.table-title {
-      display: block;
-      margin: auto;
-      max-width: 600px;
-      padding: 5px;
-      width: 100%;
+      text-align: center;
+      padding: 20px;
     }
 
     .table-title h3 {
@@ -48,7 +45,6 @@
 
     th {
       color: #D5DDE5;
-      ;
       background: #1b1e24;
       border-bottom: 4px solid #9ea7af;
       border-right: 1px solid #343a45;
@@ -169,7 +165,7 @@
       <tr>
         <th class="text-left">Key</th>
         <th class="text-left">Value</th>
-        <th class="text-left">Sample</th>
+        <th class="text-left">Usage</th>
       </tr>
     </thead>
     <tbody class="table-hover">
@@ -178,14 +174,56 @@
         <td class="text-left">
           <%= hash['androidGradlePluginVersion'] %>
         </td>
-        <td class="text-left">classpath 'com.android.tools.build:gradle:<%= hash['androidGradlePluginVersion'] %>'</td>
+        <td class="text-left">classpath 'com.android.tools.build:gradle:<strong><%= hash['androidGradlePluginVersion'] %>'</strong></td>
       </tr>
       <tr>
         <td class="text-left">gradleVersion</td>
         <td class="text-left">
           <%= hash['gradleVersion'] %>
         </td>
-        <td class="text-left">https://services.gradle.org/distributions/gradle-<%= hash['gradleVersion'] %>-all.zip</td>
+        <td class="text-left">https://services.gradle.org/distributions/gradle-<strong><%= hash['gradleVersion'] %></strong>-all.zip</td>
+      </tr>
+      <tr>
+        <td class="text-left">compileSdkVersion</td>
+        <td class="text-left">
+          <%= hash['compileSdkVersion'] %>
+        </td>
+        <td class="text-left">compileSdkVersion <strong><%= hash['compileSdkVersion'] %></strong></td>
+      </tr>
+      <tr>
+        <td class="text-left">buildToolsVersion</td>
+        <td class="text-left">
+          <%= hash['buildToolsVersion'] %>
+        </td>
+        <td class="text-left">buildToolsVersion "<strong><%= hash['buildToolsVersion'] %></strong>"</td>
+      </tr>
+      <tr>
+        <td class="text-left">targetSdkVersion</td>
+        <td class="text-left">
+          <%= hash['targetSdkVersion'] %>
+        </td>
+        <td class="text-left">targetSdkVersion <strong><%= hash['targetSdkVersion'] %></strong></td>
+      </tr>
+      <tr>
+        <td class="text-left">latestSupportVersion</td>
+        <td class="text-left">
+          <%= hash['latestSupportVersion'] %>
+        </td>
+        <td class="text-left">compile 'com.android.support:support-v7:<strong><%= hash['latestSupportVersion'] %></strong>'</td>
+      </tr>
+      <tr>
+        <td class="text-left">googlePlayServicesVersion</td>
+        <td class="text-left">
+          <%= hash['googlePlayServicesVersion'] %>
+        </td>
+        <td class="text-left">compile 'com.google.android.gms:play-services:<strong><%= hash['googlePlayServicesVersion'] %></strong>'</td>
+      </tr>
+      <tr>
+        <td class="text-left">latestAndroidVersionNumber</td>
+        <td class="text-left">
+          <%= hash['latestAndroidVersionNumber'] %>
+        </td>
+        <td class="text-left">N/R</td>
       </tr>
       <tr>
         <td class="text-left">latestAndroidVersionCode</td>
@@ -193,48 +231,6 @@
           <%= hash['latestAndroidVersionCode'] %>
         </td>
         <td class="text-left">N/R</td>
-      </tr>
-      <tr>
-        <td class="text-left">compileSdkVersion</td>
-        <td class="text-left">
-          <%= hash['compileSdkVersion'] %>
-        </td>
-        <td class="text-left">compileSdkVersion <%= hash['compileSdkVersion'] %></td>
-      </tr>
-      <tr>
-        <td class="text-left">buildToolsVersion</td>
-        <td class="text-left">
-          <%= hash['buildToolsVersion'] %>
-        </td>
-        <td class="text-left">buildToolsVersion "<%= hash['buildToolsVersion'] %>"</td>
-      </tr>
-      <tr>
-        <td class="text-left">targetSdkVersion</td>
-        <td class="text-left">
-          <%= hash['targetSdkVersion'] %>
-        </td>
-        <td class="text-left">targetSdkVersion <%= hash['targetSdkVersion'] %></td>
-      </tr>
-      <tr>
-        <td class="text-left">latestSupportVersion</td>
-        <td class="text-left">
-          <%= hash['latestSupportVersion'] %>
-        </td>
-        <td class="text-left">compile 'com.android.support:support-v7:<%= hash['latestSupportVersion'] %>'</td>
-      </tr>
-      <tr>
-        <td class="text-left">googlePlayServicesVersion</td>
-        <td class="text-left">
-          <%= hash['googlePlayServicesVersion'] %>
-        </td>
-        <td class="text-left">compile 'com.google.android.gms:play-services:<%= hash['googlePlayServicesVersion'] %>'</td>
-      </tr>
-      <tr>
-        <td class="text-left">latestAndroidVersionNumber</td>
-        <td class="text-left">
-          <%= hash['latestAndroidVersionNumber'] %>
-        </td>
-        <td class="text-left">classpath 'com.android.tools.build:gradle:2.2.0'</td>
       </tr>
       <tr>
         <td class="text-left">latestAndroidVersionName</td>
