--- a/templates/readme.erb
+++ b/templates/readme.erb
@@ -8,19 +8,19 @@ The following table was automatically generated based on [data.json](data.json):
 
 <center>
 
-| keys | values     |
-|:-----------:|:--------:|
-| androidGradlePluginVersion | <%= hash['androidGradlePluginVersion'] %> |
-| gradleVersion | <%= hash['gradleVersion'] %> |
-| latestAndroidVersionCode | <%= hash['latestAndroidVersionCode'] %> |
-| compileSdkVersion | <%= hash['compileSdkVersion'] %> |
-| buildToolsVersion | <%= hash['buildToolsVersion'] %> |
-| targetSdkVersion | <%= hash['targetSdkVersion'] %> |
-| latestSupportVersion | <%= hash['latestSupportVersion'] %> |
-| googlePlayServicesVersion | <%= hash['googlePlayServicesVersion'] %> |
-| latestAndroidVersionNumber | <%= hash['latestAndroidVersionNumber'] %> |
-| latestAndroidVersionName | <%= hash['latestAndroidVersionName'] %> |
-| latestAndroidReleaseDate | <%= hash['latestAndroidReleaseDate'] %> |
+| Key | Value     | Sample      |
+|:-----------:|:--------:|:--------:|
+| androidGradlePluginVersion | <%= hash['androidGradlePluginVersion'] %> | classpath 'com.android.tools.build:gradle:<strong><%= hash['androidGradlePluginVersion'] %>'</strong> |
+| gradleVersion | <%= hash['gradleVersion'] %> | https://services.gradle.org/distributions/gradle-<strong><%= hash['gradleVersion'] %></strong> |
+| latestAndroidVersionCode | <%= hash['latestAndroidVersionCode'] %> | N/R |
+| compileSdkVersion | <%= hash['compileSdkVersion'] %> | compileSdkVersion <strong><%= hash['compileSdkVersion'] %></strong> |
+| buildToolsVersion | <%= hash['buildToolsVersion'] %> | buildToolsVersion "<strong><%= hash['buildToolsVersion'] %></strong>" |
+| targetSdkVersion | <%= hash['targetSdkVersion'] %> | targetSdkVersion <strong><%= hash['targetSdkVersion'] %></strong> |
+| latestSupportVersion | <%= hash['latestSupportVersion'] %> | compile 'com.android.support:support-v7:<strong><%= hash['latestSupportVersion'] %></strong>' |
+| googlePlayServicesVersion | <%= hash['googlePlayServicesVersion'] %> | compile 'com.google.android.gms:play-services:<strong><%= hash['googlePlayServicesVersion'] %></strong>' |
+| latestAndroidVersionNumber | <%= hash['latestAndroidVersionNumber'] %> | N/R |
+| latestAndroidVersionName | <%= hash['latestAndroidVersionName'] %> | N/R |
+| latestAndroidReleaseDate | <%= hash['latestAndroidReleaseDate'] %> | N/R |
 
 </center>
 
