--- a/templates/html.erb
+++ b/templates/html.erb
@@ -195,7 +195,7 @@
         <td class="text-left">
           <%= hash['buildToolsVersion'] %>
         </td>
-        <td class="text-left">buildToolsVersion "<strong><%= hash['buildToolsVersion'] %></strong>"</td>
+        <td class="text-left">buildToolsVersion '<strong><%= hash['buildToolsVersion'] %></strong>'</td>
       </tr>
       <tr>
         <td class="text-left">targetSdkVersion</td>
