--- a/templates/html.erb
+++ b/templates/html.erb
@@ -174,7 +174,7 @@
         <td class="text-left">
           <%= hash['androidGradlePluginVersion'] %>
         </td>
-        <td class="text-left">classpath 'com.android.tools.build:gradle:<strong><%= hash['androidGradlePluginVersion'] %>'</strong></td>
+        <td class="text-left">classpath 'com.android.tools.build:gradle:<strong><%= hash['androidGradlePluginVersion'] %></strong>'</td>
       </tr>
       <tr>
         <td class="text-left">gradleVersion</td>
