--- a/templates/readme.erb
+++ b/templates/readme.erb
@@ -10,7 +10,7 @@ The following table was automatically generated based on [data.json](data.json):
 
 | Key | Value     | Sample      |
 |:-----------:|:--------:|:--------:|
-| androidGradlePluginVersion | <%= hash['androidGradlePluginVersion'] %> | classpath 'com.android.tools.build:gradle:<strong><%= hash['androidGradlePluginVersion'] %>'</strong> |
+| androidGradlePluginVersion | <%= hash['androidGradlePluginVersion'] %> | classpath 'com.android.tools.build:gradle:<strong><%= hash['androidGradlePluginVersion'] %></strong>' |
 | gradleVersion | <%= hash['gradleVersion'] %> | https://services.gradle.org/distributions/gradle-<%= hash['gradleVersion'] %>-all.zip |
 | compileSdkVersion | <%= hash['compileSdkVersion'] %> | compileSdkVersion <strong><%= hash['compileSdkVersion'] %></strong> |
 | buildToolsVersion | <%= hash['buildToolsVersion'] %> | buildToolsVersion '<strong><%= hash['buildToolsVersion'] %></strong>' |
