--- a/templates/readme.erb
+++ b/templates/readme.erb
@@ -8,7 +8,7 @@ The following table was automatically generated based on [data.json](data.json):
 
 <center>
 
-| Key | Value     | Sample      |
+| Key | Value     | Usage      |
 |:-----------:|:--------:|:--------:|
 | androidGradlePluginVersion | <%= hash['androidGradlePluginVersion'] %> | classpath 'com.android.tools.build:gradle:<strong><%= hash['androidGradlePluginVersion'] %></strong>' |
 | gradleVersion | <%= hash['gradleVersion'] %> | https://services.gradle.org/distributions/gradle-<%= hash['gradleVersion'] %>-all.zip |
